setting api trigger

--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -1,7 +1,8 @@
 name: Test Github Action
 run-name: run name
 on:
-  workflow_dispatch:
+  repository_dispatch:
+    types: hey
 jobs:
   configute_:
     runs-on: ubuntu-latest
@@ -10,6 +11,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      - id: plan  
+      - id: plan
         run: |-
           ./main.sh
